[package]
name = "wasm_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
uuid = { version = "1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "std", "js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde_json = "1"
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
ascii85 = "0.2"
data-encoding = "2"
hex = "0.4"
crc = "3"
crc32fast = "1"
adler = "1"
md-5 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = { version = "0.31", features = ["serialize"] }
rmp-serde = "1"
serde_bytes = "0.11"
regex = "1"
json2toon_rs = "0.2"
rmpv = "1"
