[package]
name = "wasm_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
wasm-bindgen = "0.2"
uuid = { version = "1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "std", "js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2.16", features = ["js"] }
console_error_panic_hook = "0.1"
serde_json = "1"
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"
ascii85 = "0.2"
qrcode = { version = "0.14", features = ["image", "svg"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif"] }
data-encoding = "2"
hex = "0.4"
crc = "3"
crc32fast = "1"
adler = "1"
md-5 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = { version = "0.31", features = ["serialize"] }
rmp-serde = "1"
serde_bytes = "0.11"
regex = "1"
json2toon_rs = "0.2"
similar = "2.6"
rmpv = "1"
bcrypt = "0.15"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "rand_core"] }
rand_core = "0.6"
x509-parser = "0.16"
time = { version = "0.3", features = ["formatting"] }
aes-gcm = { version = "0.10", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
